waltid-services/waltid-verifier-api2/k8s/deployment-dev.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: verifier2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: verifier2
  template:
    metadata:
      labels:
        app: verifier2
      annotations:
        deployment/id: "_DEFAULT_DEPLOYMENT_"
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 10001
        seccompProfile:
          type: RuntimeDefault
      containers:
        - name: verifier2
          args:
            - "-l"
            - "trace"
          image: waltid/verifier-api2:__DEFAULT_IMAGE_TAG__
          imagePullPolicy: Always
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
          volumeMounts:
            - name: verifier2-web-config
              mountPath: "/waltid-verifier-api2/config/"
              readOnly: true
            - name: verifier-request-signing
              mountPath: "/waltid-verifier-api2/request-signing-secret/"
          ports:
            - containerPort: 3000
              name: http-api
      volumes:
        - name: verifier2-web-config
          configMap:
            name: verifier2-web-config
        - name: verifier-request-signing
          secret:
            secretName: verifier-request-signing
---
kind: Service
apiVersion: v1
metadata:
  name: verifier2
spec:
  ports:
    - name: http
      port: 80
      targetPort: http-api
      protocol: TCP
  selector:
    app: verifier2
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: verifier2
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: letsencrypt-prod
spec:
  tls:
    - hosts:
        - verifier2.portal.test.waltid.cloud
      secretName: verifier2-tls-secret
  rules:
    - host: verifier2.portal.test.waltid.cloud
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: verifier2
                port:
                  name: http
